final updated floder version and data ingestion code part also

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-lancedb
 langchain
-langchain-community
 langgraph
 tavily-python
-ipykernel
 polygon
+langchain_community
+langchain_google_genai
+streamlit
+fastapi[all]
+uvicorn
+ipykernel
+
 
 -e .
